# rust-ibm_db

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  mystrlen.c  wrapper.h
examples/: EXAMPLES.md  advanced_queries.rs  affected_rows.rs  bind_params.rs  column_descriptions.rs  column_metadata.rs  connect.rs  connect_pool.rs  connection_properties.rs  data_types.rs  error_handling.rs  execute_query.rs  list_tables.rs  parameter_binding.rs  print_drivers_and_datasources.rs  setup.rs  transaction_control.rs
src/: connection.rs  diagnostics.rs  lib.rs  main.rs  main_unix.rs  main_windows.rs  odbc_object.rs  raii.rs  result.rs
src/environment/: list_data_sources.rs  mod.rs
src/statement/: input.rs  mod.rs  output.rs  prepare.rs  types.rs
