[package]
name = "ibm_db"
version = "0.1.3"
authors = ["Binit Kumar <bkumar@rocketsoftware.com>"]
license = "MIT OR Apache-2.0"
description = "A tool for DB2 connectivity using CLI Driver"
readme = "README.md"
homepage = "https://github.com/ibmdb/rust-ibm_db"
repository = "https://github.com/ibmdb/rust-ibm_db"
keywords = ["cli", "db2", "clidb2", "rustdb2"]
edition = "2018"
build = "build.rs"
links = "db2app64"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[lib]
name = "CCODE"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0"
[dependencies]
winapi = "0.2"
user32-sys = "0.2"
sys-info = "0.7.0"
bitness = "0.4.0"
error-chain = "0.12.4"
tempfile = "3.1.0"
reqwest = "0.10.10"
#reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"
zip = "0.5"
flate2 = "1.0"
tar = "0.4"